[package]
name = "rust_lib_widget_layout_example2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
alloy = { version = "2.0.4", features = ["providers", "provider-http", "contract", "rpc-types", "sol-types"] }
anyhow = "1.0.102"
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
url = "2.5.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
