[package]
name = "rust_lib_widget_layout_example2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
alloy = { version = "2.0.4", features = ["providers", "provider-http", "contract", "rpc-types", "sol-types"] }
anyhow = "1.0.102"
flutter_rust_bridge = "=2.12.0"
futures = "0.3.32"
libp2p = { version = "0.56", features = ["ed25519", "macros", "request-response", "tokio"] }
libp2p-request-response = { version = "0.29.0", features = ["cbor"] }
libp2p-webrtc = { version = "0.9.0-alpha.1", features = ["tokio"] }
rand = "=0.8.5"
rustls = { version = "0.23.40", default-features = false, features = ["std", "aws_lc_rs"] }
serde = { version = "1.0", features = ["derive"] }
solana-client = "3.1.14"
solana-commitment-config = "3.1.1"
solana-native-token = "3.0.0"
solana-pubkey = "4.2.0"
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
tokio = { version = "=1.52.1", features = ["rt-multi-thread", "time"] }
tracing = "0.1.44"
url = "2.5.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
